--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </form>
     <ul class="js-todo-list">
     </ul>
+    <span class="weather-info">Your location, temp, humi</span>
     <span class="js-weather"></span>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
