--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>js chrome web</title>
+    <title>웹A 기말과제 2071323 박성찬</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
