--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </form>
     <h4 class="js-greetings greetings"></h4>
     <form class="js-todo-form">
-        <input type="text" placeholder="what is yor todo things today?">
+        <input type="text" placeholder="what is yor favorite dog?">
     </form>
     <ul class="js-todo-list">
     </ul>
